index.css spacing fixed following PR

--- a/index.scss
+++ b/index.scss
@@ -34,7 +34,6 @@ body{
   .homePageTitle {
     text-decoration: none;
   }
-
   .navButton {
     padding: 20px 7px;
     margin: 0 5px;
@@ -62,10 +61,9 @@ body{
     font-size: 40px;
     margin: 0 5px;
   }
-
     h1{
       padding: 15px 0 15px 10px;
-      color: white;
+      color: #FFFFFF;
     }
   .allUserCardsContainer {
     @include centering-container;
